@@ -487,8 +487,11 @@ void QwtDial::drawScale( QPainter *painter,
     const QColor textColor = pal.color( QPalette::Text );
     pal.setColor( QPalette::WindowText, textColor ); // ticks, backbone
 
+    QPen pen( textColor, sd->penWidthF() );
+    pen.setCosmetic( sd->isPenCosmetic() );
+
     painter->setFont( font() );
-    painter->setPen( QPen( textColor, sd->penWidth() ) );
+    painter->setPen( pen );
 
     painter->setBrush( Qt::red );
     sd->draw( painter, pal );
